[package]
name = "vulkan-ash-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ash = "0.27"
ash = "0.38.0"
ash-window = "0.13.0"
env_logger = "0.11.5"
log = "0.4.22"
winit = { version = "0.30.4", features = ["rwh_06", "x11", "wayland"] }
